# advent22

./: 1.apl
day1/: day1.apl
day10/: dub.json
day10/source/: app.d
day11/: .#data.txt  day11.opam  dune-project
day2/: data-wrong-left.txt  data-wrong-right.txt  run.sh  step1.tcl  step2.tcl
day3/: run.sh  step1.pl  step2.pl
day4/: part1.py  part2.py  run.sh
day5/: run.sh  step1.nim  step2.nim  utils.nim
day6/: Day6.hs  run.sh
day7/: mix.exs  run.sh  small.exs  step1.exs  step2.exs
day7/lib/: ast.ex  calculator.ex  evaluator.ex  parser.ex  tree.ex
day7/test/: calculator_test.exs  evaluator_test.exs  parser_test.exs  tree_test.exs
day8/: README.md  day8.asd  day8.lisp  package.lisp  step1.lisp
day8/tests/: day8.lisp
day9/: run.sh  step1.raku  step2.raku
